# rex

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  dev.md  justfile  req.md  tasks.md
.github/: codecov.yml
.github/workflows/: build.yml  check.yml  test.yml
docs/: design.md  development.md
librex/: API.md  Cargo.toml  design.md
librex/examples/: basic_usage.rs
librex/src/: lib.rs  rex.rs
librex/src/auth/: mod.rs  notes.md  store.rs  store_tests.rs  tests.rs
librex/src/cache/: mod.rs  notes.md  tests.rs
librex/src/client/: mod.rs  notes.md  tests.rs
librex/src/config/: mod.rs  notes.md  tests.rs
librex/src/digest/: mod.rs  notes.md  tests.rs
librex/src/error/: mod.rs  notes.md  tests.rs
librex/src/format/: mod.rs  notes.md  tests.rs
librex/src/oci/: mod.rs  notes.md  tests.rs
librex/src/reference/: mod.rs  notes.md  tests.rs
librex/src/registry/: mod.rs  tests.rs
librex/src/search/: mod.rs  notes.md  tests.rs
librex/tests/: public_api.rs
rex/: Cargo.toml  design.md  tui-design.md  tui-implementation-plan.md
rex/src/: config.rs  config_tests.rs  context.rs  main.rs  output.rs  version_tests.rs
rex/src/commands/: config.rs  config_tests.rs  mod.rs  version.rs
rex/src/commands/image/: details.rs  details_tests.rs  handlers.rs  handlers_tests.rs  inspect.rs  inspect_tests.rs  list.rs  list_tests.rs  mod.rs  remove.rs  tags.rs  tags_tests.rs  tests.rs
rex/src/commands/registry/: handlers.rs  handlers_tests.rs  mod.rs  tests.rs
rex/src/commands/search/: handlers.rs  mod.rs  tests.rs
rex/src/config/: mod.rs  tests.rs
rex/src/format/: mod.rs  tests.rs
rex/src/image/: metadata.rs  metadata_tests.rs  mod.rs  types.rs  types_tests.rs
rex/src/tui/: app.rs  app_tests.rs  banner.rs  banner_tests.rs  events.rs  events_tests.rs  footer_tests.rs  mod.rs  notes.md  progress.rs  progress_tests.rs  shell.rs  shell_tests.rs  tests.rs  theme.rs  theme_tests.rs  title_bar_tests.rs  worker.rs  worker_tests.rs
rex/src/tui/views/: details.rs  details_tests.rs  mod.rs  repos.rs  repos_tests.rs  tags.rs  tags_tests.rs
src/: tests.rs
