[package]
name = "librex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
bincode = "1.3"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-humanize = "0.2.3"
config = { version = "0.14", features = ["yaml"] }
humansize = "2.1.3"
lru = "0.12"
oci-spec = "0.8.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
walkdir = "2"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.6"
tokio-test = "0.4"

