[package]
name = "librex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22"
bincode = "2.0.1"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-humanize = "0.2.3"
config = { version = "0.15.18", features = ["yaml"] }
humansize = "2.1.3"
lru = "0.16.2"
nucleo-matcher = "0.3"
oci-spec = "0.8.3"
reqwest = { version = "0.12.24", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.17"
toml = "0.9.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3.6"

