[package]
name = "rex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
librex = { path = "../librex" }
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"
toml_edit = "0.23.7"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = { version = "0.9.8", features = ["preserve_order"] }
tabled = { version = "0.20.0", features = ["ansi"] }
url = "2.5.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
rpassword = "7.4"
indicatif = "0.17"
owo-colors = "4"
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
tempfile = "3.23.0"
mockito = "1.6.1"
# Test dependencies will be added as needed
