[package]
name = "rex"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
librex = { path = "../librex" }
clap = { version = "4.5.50", features = ["derive", "cargo"] }
clap_complete = "4.5"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = { version = "0.9.8", features = ["preserve_order"] }
tabled = { version = "0.20.0", features = ["ansi"] }
url = "2.5.7"
rpassword = "7.4"
indicatif = "0.18.2"
owo-colors = "4"
chrono = { version = "0.4.42", features = ["serde"] }
rayon = "1.10"
ratatui = "0.25"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.23.0"
mockito = "1.6.1"
# Test dependencies will be added as needed
